:memo: add get restricted geopoint in swagger
