# docs/swagger.yaml
@@ -330,6 +330,48 @@ paths:
       summary: create a geopoint
       tags:
       - Geopoint
+  /restricted/geopoint/{id}:
+    get:
+      consumes:
+      - application/json
+      description: retrieve the geopoint in the database using its id
+      parameters:
+      - description: geopoint id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Authentication header
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/geopoint.GeoPoint'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.ErrMsg'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controller.ErrMsg'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.ErrMsg'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.ErrMsg'
+      summary: get a geopoint which was not enabled
+      tags:
+      - Geopoint
   /restricted/geopoint/{id}/enable:
     patch:
       consumes:
